--- a/Ngonzalez.Util/project.json
+++ b/Ngonzalez.Util/project.json
@@ -1,8 +1,8 @@
 {
-  "version": "1.0.1",
+  "version": "1.2.0",
   "description": "Ngonzalez.Util",
   "authors": [ "Ngonzalez" ],
-  "tags": [ "" ],
+  "tags": [ "dnxcore,dnx451" ],
   "projectUrl": "",
   "licenseUrl": "",
 
