--- a/Ngonzalez.Util/project.json
+++ b/Ngonzalez.Util/project.json
@@ -1,38 +1,29 @@
 {
-  "version": "1.2.5",
+  "version": "1.2.7",
   "description": "Ngonzalez.Util",
-  "authors": [ "Ngonzalez" ],
-  "tags": [ "dnxcore,dnx451" ],
-  "projectUrl": "",
-  "licenseUrl": "",
+  "authors": [ "Nicolas Gonzalez (ngonzalezromero@gmail.com)" ],
 
-  "dependencies": {
-    "Microsoft.Extensions.Logging.Abstractions": "1.0.0-rc1-final",
-    "Microsoft.Extensions.Caching.Memory": "1.0.0-rc1-final",
-    "Microsoft.AspNet.Hosting": "1.0.0-rc1-final",
-    "Microsoft.AspNet.Mvc": "6.0.0-*",
-    "CodeComb.HtmlAgilityPack": "2.0.0-*"
+  "packOptions": {
+    "tags": [ "netcoreapp1.0,net451" ]
+
   },
 
+
+  "dependencies": {
+    "Microsoft.Extensions.Logging": "1.0.0-rc2-final",
+    "Microsoft.Extensions.Caching.Memory": "1.0.0-rc2-final",
+    "Microsoft.AspNetCore.Hosting": "1.0.0-rc2-final",
+    "Microsoft.AspNetCore.Mvc": "1.0.0-rc2-final",
+    "Ngonzalez.HtmlAgilityPack": "1.0.1",
+    "System.Net.Http": "4.0.1-rc2-24027"
+  },
+
+
+
   "frameworks": {
-    "dnx451": {
-      "frameworkAssemblies": {
-        "System.Net.Http": "4.0.0.0"
-      }
-
+    "netcoreapp1.0": {
+      "imports": [ "dnxcore50" ]
     },
-    "dnxcore50": {
-      "dependencies": {
-        "Microsoft.CSharp": "4.0.1-*",
-        "System.Collections": "4.0.11-*",
-        "System.Linq": "4.0.1-*",
-        "System.Runtime": "4.0.21-*",
-        "System.Threading": "4.0.11-*",
-        "System.Threading.Thread": "4.0.0-*",
-        "System.Security.Cryptography.RandomNumberGenerator": "4.0.0-*",
-        "System.Net.Http": "4.0.0-*"
-      }
-    }
-
+    "net451": { }
   }
 }
