--- a/TestNgonzalez.Util/project.json
+++ b/TestNgonzalez.Util/project.json
@@ -1,25 +1,22 @@
-﻿{
-    "version": "1.0.0-*",
-    "description": "",
-    "authors": [ "" ],
-    "tags": [ "" ],
-    "projectUrl": "",
-    "licenseUrl": "",
+{
+  "version": "1.0.0-*",
 
   "dependencies": {
-    "xunit.runner.dnx": "2.1.0-rc1-build204",
-    "xunit": "2.1.0-rc1-build3168",
-    "Ngonzalez.Util": "1.0.1"
-  },
-    "commands": {
-        "test": "xunit.runner.dnx"
+    "Microsoft.NETCore.App": {
+      "type": "platform",
+      "version": "1.0.0-rc2-*"
     },
-    "frameworks": {
-        "dnx451": { },
-        "dnxcore50": {
-          "dependencies": {
-            
-          }
-        }
+    "xunit": "2.1.0-rc2-*",
+    "dotnet-test-xunit": "1.0.0-rc2-*",
+    "Ngonzalez.Util": "1.2.7"  },
+  "frameworks": {
+    "netcoreapp1.0": {
+      "imports": [
+        "dotnet5.4",
+        "portable-net451+win8"
+      ]
     }
+  },
+  "testRunner": "xunit"
+
 }
