--- a/TestNgonzalez.Util/project.json
+++ b/TestNgonzalez.Util/project.json
@@ -7,6 +7,7 @@
       "version": "1.0.0-rc2-*"
     },
     "xunit": "2.1.0-rc2-*",
+     "Microsoft.AspNetCore.TestHost": "1.0.0-rc2-*",
     "dotnet-test-xunit": "1.0.0-rc2-*",
     "Ngonzalez.Util": "1.2.8"  },
   "frameworks": {
