--- a/Ngonzalez.Util/project.json
+++ b/Ngonzalez.Util/project.json
@@ -1,14 +1,14 @@
 {
-  "version": "1.2.12",
+  "version": "1.2.13",
   "description": "Ngonzalez.Util",
-  "authors": [ "Nicolas Gonzalez (ngonzalezromero@gmail.com)" ],
-
+  "authors": [
+    "Nicolas Gonzalez (ngonzalezromero@gmail.com)"
+  ],
   "packOptions": {
-    "tags": [ "netcoreapp1.0,net451" ]
-
+    "tags": [
+      "netcoreapp1.0,net451"
+    ]
   },
-
-
   "dependencies": {
     "Microsoft.Extensions.Logging": "1.0.0-rc2-final",
     "Microsoft.Extensions.Caching.Memory": "1.0.0-rc2-final",
@@ -17,18 +17,18 @@
     "Ngonzalez.HtmlAgilityPack": "1.0.1",
     "System.Net.Http": "4.0.1-rc2-24027"
   },
-
-
-
   "frameworks": {
     "netcoreapp1.0": {
-      "imports": [ "dnxcore50" ]
+     "imports": [
+        "dotnet5.6",
+        "dnxcore50",
+        "portable-net45+win8+wp8"
+      ]
     },
     "net451": {
       "dependencies": {
         "System.Runtime": "4.1.0-rc2-24027"
       }
-
     }
   }
 }
