--- a/Ngonzalez.Util/project.json
+++ b/Ngonzalez.Util/project.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.2.15",
+  "version": "1.2.16",
   "description": "Ngonzalez.Util",
   "authors": [
     "Nicolas Gonzalez (ngonzalezromero@gmail.com)"
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "Microsoft.Extensions.Logging": "1.0.0-rc2-final",
-    "Microsoft.Extensions.Caching.Memory": "1.0.0-rc2-final",
+    "Microsoft.Extensions.Caching.Abstractions": "1.0.0-rc2-final",
     "Microsoft.AspNetCore.Hosting": "1.0.0-rc2-final",
     "Microsoft.AspNetCore.Mvc": "1.0.0-rc2-final",
     "Ngonzalez.HtmlAgilityPack": "1.0.1",
