--- a/Ngonzalez.Util/project.json
+++ b/Ngonzalez.Util/project.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.2.16",
+  "version": "2.0.0",
   "description": "Ngonzalez.Util",
   "authors": [
     "Nicolas Gonzalez (ngonzalezromero@gmail.com)"
@@ -10,12 +10,12 @@
     ]
   },
   "dependencies": {
-    "Microsoft.Extensions.Logging": "1.0.0-rc2-final",
-    "Microsoft.Extensions.Caching.Abstractions": "1.0.0-rc2-final",
-    "Microsoft.AspNetCore.Hosting": "1.0.0-rc2-final",
-    "Microsoft.AspNetCore.Mvc": "1.0.0-rc2-final",
-    "Ngonzalez.HtmlAgilityPack": "1.0.1",
-    "System.Net.Http": "4.0.1-rc2-24027"
+    "Microsoft.Extensions.Logging": "1.0.0",
+    "Microsoft.Extensions.Caching.Abstractions": "1.0.0",
+    "Microsoft.AspNetCore.Hosting": "1.0.0",
+    "Microsoft.AspNetCore.Mvc": "1.0.0",
+    "Ngonzalez.HtmlAgilityPack": "2.0.0",
+    "System.Net.Http": "4.1.0"
   },
   "frameworks": {
     "netcoreapp1.0": {
