--- a/TestNgonzalez.Util/project.json
+++ b/TestNgonzalez.Util/project.json
@@ -1,23 +1,20 @@
+
 {
-  "version": "1.0.0-*",
-
-  "dependencies": {
-    "Microsoft.NETCore.App": {
-      "type": "platform",
-      "version": "1.0.0-rc2-*"
+    "version": "1.0.0-*",
+    "testRunner": "xunit",
+    "dependencies": {
+        "xunit": "2.2.0-beta2-build3300",
+        "dotnet-test-xunit": "2.2.0-preview2-build1029",
+        "Ngonzalez.Util": "2.1.0"
     },
-    "xunit": "2.1.0-rc2-*",
-     "Microsoft.AspNetCore.TestHost": "1.0.0-rc2-*",
-    "dotnet-test-xunit": "1.0.0-rc2-*",
-    "Ngonzalez.Util": "1.2.13"  },
-  "frameworks": {
-    "netcoreapp1.0": {
-      "imports": [
-        "dotnet5.4",
-        "portable-net451+win8"
-      ]
+    "frameworks": {
+        "netcoreapp1.0": {
+            "dependencies": {
+                "Microsoft.NETCore.App": {
+                    "type": "platform",
+                    "version": "1.0.0"
+                }
+            }
+        }
     }
-  },
-  "testRunner": "xunit"
-
 }
